Jetpack Pricing page cart integration - fix multiple style issues - Make cart in mobile view not overflow the viewport and add scroll - Add timeout to toast message when adding an item to cart - Set the z-index for mobile cart view so it shows aboev the zendesk chat icon - Fix package export for isSupersedingJetpackItem and remove imports using private namespace

--- a/client/jetpack-cloud/sections/pricing/jpcom-masterbar/style.scss
+++ b/client/jetpack-cloud/sections/pricing/jpcom-masterbar/style.scss
@@ -1255,6 +1255,11 @@
 			top: 0;
 			bottom: unset;
 			box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
+			max-height: 100%;
+		}
+		.masterbar-cart-button__popover {
+			//display mobile cart at the top most layer
+			z-index: 9999999;
 		}
 	}
 }
