--- a/client/jetpack-cloud/sections/pricing/style.scss
+++ b/client/jetpack-cloud/sections/pricing/style.scss
@@ -27,3 +27,7 @@
 html {
 	overflow-y: initial;
 }
+body.is-mobile-cart.is-section-jetpack-cloud-pricing {
+	//hide scroll for body when cart is open in mobile view
+	overflow-y: hidden;
+}
